Fix page header spacing (#67)

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -276,6 +276,10 @@
         top: -1px;
       }
 
+      .fa {
+        vertical-align: 0;
+      }
+
       @media (min-width: 992px) and (min-height: $screen-lg-height), (max-width: $screen-sm-max){
         .glyphicon {
           top: 6px;
@@ -394,7 +398,7 @@
     }
 
     .glyphicon {
-      top: 3px;
+      top: 5px;
     }
   }
 
@@ -880,7 +884,7 @@
 }
 
 .page-title{
-  margin: 0 0 $line-height-computed;
+  margin: 0 0 $line-height-computed+.4rem;
 }
 
 .notifications{
