--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -97,7 +97,7 @@ $navbar-font-size:              13px !default;
 
 $chat-sidebar-width: 250px + $sidebar-slim-scroll-width !default;
 
-$content-padding-vertical: $line-height-computed*2 !default;
+$content-padding-vertical: $line-height-computed*3 !default;
 $content-padding-top: $content-padding-vertical + $navbar-height !default;
 $content-padding-horizontal: 40px !default;
 
